--- a/weeks/index.html
+++ b/weeks/index.html
@@ -40,7 +40,7 @@
   </div>
   <div class="app-content">
     <div class="app-sidebar">
-      <a href="" class="app-sidebar-link active">
+      <a href="../home/" class="app-sidebar-link">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
           <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
           <polyline points="9 22 9 12 15 12 15 22" /></svg>
@@ -51,7 +51,7 @@
           <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
         </svg>
       </a>
-      <a href="" class="app-sidebar-link">
+      <a href="" class="app-sidebar-link active">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar">
           <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
           <line x1="16" y1="2" x2="16" y2="6" />
@@ -67,103 +67,6 @@
       </a>
     </div>
     <div class="projects-section">
-      <div class="projects-section-line">
-        <div class="view-actions">
-          <button class="view-btn list-view" title="List View">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list">
-              <line x1="8" y1="6" x2="21" y2="6" />
-              <line x1="8" y1="12" x2="21" y2="12" />
-              <line x1="8" y1="18" x2="21" y2="18" />
-              <line x1="3" y1="6" x2="3.01" y2="6" />
-              <line x1="3" y1="12" x2="3.01" y2="12" />
-              <line x1="3" y1="18" x2="3.01" y2="18" /></svg>
-          </button>
-          <button class="view-btn grid-view active" title="Grid View">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-grid">
-              <rect x="3" y="3" width="7" height="7" />
-              <rect x="14" y="3" width="7" height="7" />
-              <rect x="14" y="14" width="7" height="7" />
-              <rect x="3" y="14" width="7" height="7" /></svg>
-          </button>
-        </div>
-      </div>
-      <div class="project-boxes jsGridView">
-        <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #cbecfe;">
-            <div class="project-box-header">
-              <span>Date, Year</span>
-              <div class="more-wrapper">
-                <button class="project-btn-more">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
-                    <circle cx="12" cy="12" r="1" />
-                    <circle cx="12" cy="5" r="1" />
-                    <circle cx="12" cy="19" r="1" /></svg>
-                </button>
-          </div>
-        </div>
-        <div class="project-box-content-header">
-          	<div class="day-prl">
-				
-					<div class="para_main">
-							<div>
-						<div class="num_pr">1 пара  8:30 - 10:00</div>
-						<div class="info_pr">Техническая механика</div>
-							</div>
-									<div>
-								<div class="Int_buttons">
-									<button class="DZ_BTT"><img class="DZ" src="../Content/IMG/workbook-3897984.png"></button><button class="DZ_BTT"><img class="DZ" src="../Content/IMG/Flag.png"></button><button class="DZ_BTT"><img class="DZ" src="../Content/IMG/info.png"></button>
-								</div>
-									</div>
-					</div>
-					<div class="para_main">
-							<div>
-						<div class="num_pr">2 пара  10:15 - 11:50</div>
-						<div class="info_pr">Гидравлика</div>
-							</div>
-									<div>
-								<div class="Int_buttons">
-									<div>Задание<br>Выполнить расчётные работы </div>
-								</div>
-									</div>
-					</div>
-					<div class="para_main">
-						<div class="num_pr">3 пара  12:00 - 13:35</div>
-						<div class="info_pr">Математика</div>
-					</div>
-					<div class="para_main">
-						<div class="num_pr">4 пара  14:15 - 15:50</div>
-						<div class="info_pr">Философия</div>
-					</div>
-					<div class="para_main">
-						<div class="num_pr">5 пара  16:00 - 17:35</div>
-						<div class="info_pr">Материаловедение</div>
-					</div>
-			</div>
-        </div>
-        <div class="box-progress-wrapper">
-          <p class="box-progress-header">Progress</p>
-          <div class="box-progress-bar">
-            <span class="box-progress" style="width: 0%; background-color: #2e33ff;"></span>
-          </div>
-          <p class="box-progress-percentage">0%</p>
-        </div>
-        <div class="project-box-footer">
-          <div class="participants">
-            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="participant">
-            <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fG1hbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-            <button class="add-participant" style="color: #2e33ff;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
-                <path d="M12 5v14M5 12h14" />
-              </svg>
-            </button>
-          </div>
-          <div class="days-left" style="color: #2ea6ff">
-            2 Дня Осталось
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 </div>
 </div>
