app-sidebar-link

--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href="../Content/CSS/main.css" rel="stylesheet">
 	<link href="../Content/CSS/media-rq.css" rel="stylesheet">
-    <title>ZMT API</title>
+    <title>Распсание</title>
 </head>
 <body>
 <div class="app-container">
