--- a/home/index.html
+++ b/home/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <link href="../Content/CSS/main.css" rel="stylesheet">
 	<link href="../Content/CSS/media-rq.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+	<script src="../Content/JS/weeks-load.js" defer></script>
+  <script src="../Content/JS/e3-Rt13.js" defer></script>
     <title>Расписание</title>
 </head>
 <body>
@@ -196,5 +199,5 @@
 </div>
 </div>
 </div>
-</html>
 </body>
+</html>
