Доделал расширение пары, не нравится как туда встала svg стрелка не ровно, а так всё пашет.

--- a/home/index.html
+++ b/home/index.html
@@ -148,21 +148,19 @@
 									</div>
 					</div>
 					<div class="para_main para2__test-grid para__main-extended">
-
 							<div class="para2__test-grid_wrapper">
                 <div class="num_pr"> 2 пара </div>
                 <div class="time_pr"> 10:15 - 11:50 </div>
                 <div class="info_pr"> Гидравлика </div>
 
-                <div class="Int_buttons">
-									 <p> Задание. Выполнить расчётные работы. </p>
+                <div class="para__task-extended">
+									 <p> <mark> Задание. Выполнить расчётные работы. </mark> </p>
 								</div>
 							</div>
 
 							<div class="para__important"> <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path></svg>
 								
 							</div>
-
 					</div>
 					<div class="para_main">
 						<div class="num_pr">3 пара  12:00 - 13:35</div>
